--- a/ON4/App.config
+++ b/ON4/App.config
@@ -11,24 +11,24 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
   <connectionStrings>
-      <add name="connString" connectionString="Server=.;DataBase=Calorimeter1;Uid=sa;Pwd=123" />
-      <add name="cnn" connectionString="Server=.;DataBase=Calorimeter1;Uid=sa;Pwd=123" />
-      <add name="ON4.Properties.Settings.Calorimeter1ConnectionString"
-          connectionString="Data Source=.;Initial Catalog=Calorimeter1;User ID=sa;Password=123"
-          providerName="System.Data.SqlClient" />
-      <add name="Calorimeter1Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Calorimeter1;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-          providerName="System.Data.EntityClient" />
-      <add name="Calorimeter1Entities2" connectionString="metadata=res://*/Model2.csdl|res://*/Model2.ssdl|res://*/Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Calorimeter1;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-          providerName="System.Data.EntityClient" />
-      <add name="Calorimeter1Entities1" connectionString="metadata=res://*/Model2.csdl|res://*/Model2.ssdl|res://*/Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Calorimeter1;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-          providerName="System.Data.EntityClient" />
-      <add name="Calorimeter1Entities3" connectionString="metadata=res://*/Model3.csdl|res://*/Model3.ssdl|res://*/Model3.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Calorimeter1;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-          providerName="System.Data.EntityClient" />
-      <add name="Calorimeter1Entities4" connectionString="metadata=res://*/Model4.csdl|res://*/Model4.ssdl|res://*/Model4.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Calorimeter1;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-          providerName="System.Data.EntityClient" />
-      <add name="ON4.Properties.Settings.Calorimeter1ConnectionString1"
-          connectionString="Data Source=.;Initial Catalog=Calorimeter1;User ID=sa;Password=123"
-          providerName="System.Data.SqlClient" />
+    <add name="connString" connectionString="Server=.\sqlexpress;DataBase=Calorimeter1;Uid=sa;Pwd=123" />
+    <add name="cnn" connectionString="Server=.\sqlexpress;DataBase=Calorimeter1;Uid=sa;Pwd=123" />
+    <add name="ON4.Properties.Settings.Calorimeter1ConnectionString"
+        connectionString="Data Source=.\sqlexpress;Initial Catalog=Calorimeter1;User ID=sa;Password=123"
+        providerName="System.Data.SqlClient" />
+    <add name="Calorimeter1Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=Calorimeter1;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+        providerName="System.Data.EntityClient" />
+    <add name="Calorimeter1Entities2" connectionString="metadata=res://*/Model2.csdl|res://*/Model2.ssdl|res://*/Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=Calorimeter1;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+        providerName="System.Data.EntityClient" />
+    <add name="Calorimeter1Entities1" connectionString="metadata=res://*/Model2.csdl|res://*/Model2.ssdl|res://*/Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=Calorimeter1;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+        providerName="System.Data.EntityClient" />
+    <add name="Calorimeter1Entities3" connectionString="metadata=res://*/Model3.csdl|res://*/Model3.ssdl|res://*/Model3.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=Calorimeter1;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+        providerName="System.Data.EntityClient" />
+    <add name="Calorimeter1Entities4" connectionString="metadata=res://*/Model4.csdl|res://*/Model4.ssdl|res://*/Model4.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=Calorimeter1;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+        providerName="System.Data.EntityClient" />
+    <add name="ON4.Properties.Settings.Calorimeter1ConnectionString1"
+        connectionString="Data Source=.\sqlexpress;Initial Catalog=Calorimeter1;User ID=sa;Password=123"
+        providerName="System.Data.SqlClient" />
   </connectionStrings>
   <userSettings>
     <ON4.Properties.Settings>
