--- a/ON4/ON4.csproj
+++ b/ON4/ON4.csproj
@@ -74,6 +74,10 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
       <HintPath>C:\Program Files\Microsoft Office\root\Office16\ADDINS\Microsoft Power Query for Excel Integrated\bin\Microsoft.Office.Interop.Excel.dll</HintPath>
     </Reference>
+    <Reference Include="NPOI, Version=1.2.4.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\NPOI.dll</HintPath>
+    </Reference>
     <Reference Include="SunnyUI, Version=3.0.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SunnyUI.3.0.3\lib\net40\SunnyUI.dll</HintPath>
     </Reference>
@@ -152,6 +156,7 @@
       <DependentUpon>Calorimeter1DataSet7.xsd</DependentUpon>
     </Compile>
     <Compile Include="Data1.cs" />
+    <Compile Include="DataExport.cs" />
     <Compile Include="DataGridViewStyle.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -291,6 +296,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model4.edmx</DependentUpon>
     </Compile>
+    <Compile Include="NPOIExcelHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemSet.cs">
@@ -587,6 +593,7 @@
     </Content>
     <Content Include="ON4.ico" />
     <Content Include="SQL\Calorimeter1.sql" />
+    <Content Include="SQL\Cost_Schedule.txt" />
     <Content Include="SQL\Sql_view.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
