修复了创建数据库时没有楼层信息

--- a/ON4/App.configFile/。/App.config
+++ b/ON4/App.configFile/。/App.config
@@ -78,10 +78,10 @@
         <value>全部</value>
       </setting>
       <setting name="启用计费" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="启用自动记录" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="从__点到" serializeAs="String">
         <value>8</value>
@@ -93,7 +93,7 @@
         <value>一个</value>
       </setting>
       <setting name="自动连接串口" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="楼层五串口" serializeAs="String">
         <value>COM51</value>
