优化：优化读取数据流程 增加：         1.增加手动读取写入数据库功能(按钮)         2.接收串口数据延时时间可修改         3.增加读取数据失败数据显示(failTable.txt)

--- a/ON4/App.config
+++ b/ON4/App.config
@@ -158,6 +158,9 @@
       <setting name="六层阀门串口2" serializeAs="String">
         <value>COM60</value>
       </setting>
+      <setting name="读取延时时间" serializeAs="String">
+        <value>800</value>
+      </setting>
     </ON4.Properties.Settings>
   </userSettings>
   <entityFramework>
