--- a/ON4/ON4.csproj
+++ b/ON4/ON4.csproj
@@ -334,6 +334,7 @@
     </Compile>
     <EmbeddedResource Include="Batchimport.resx">
       <DependentUpon>Batchimport.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.dz-BT.resx">
       <DependentUpon>Form1.cs</DependentUpon>
